--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
     
     <div id="list"><img src="img/advantages_1.png" />
     <span>Возврат и обмен товара осуществляется в течении 30 дней </span>
-    <div class="poster"><br><img src="img/advantages_4.png" />
+    <br><br><div class="poster"><img src="img/advantages_4.png" />
             <div class="descr">
                 <div id="delivery"><h3>Возврат и обмен товара</h3></div>
                 <ul>
@@ -655,7 +655,7 @@
             <li>Кредит</li>
             <li>Банковский перевод</li>
         </ul>
-    <div class="posters"><img src="img/advantages_4.png" /></div>
+    <div class="posters"><img src="img/advantages_4.png" />
         <div class="descrs">
                 <div id="deliverys"><h3>Способы оплаты</h3></div>
                 <ul>
@@ -683,6 +683,7 @@
                 <span>- Оплата картой возможна при покупке или самовывозе товара из нашего магазина на Петровке.</span>
               
         </div>
+    </div>
     </div>
 </div>
 
